--- a/style.css
+++ b/style.css
@@ -8,35 +8,11 @@
 
 body{
     min-height: 100vh;
-    background-color: black;
+    background: linear-gradient(to bottom, #000033, #000066);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url('background.png');
-    background-size:cover;
-          -webkit-animation: slidein 100s;
-          animation: slidein 100s;
-  
-          -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-  
-          -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  
-          -webkit-animation-direction: alternate;
-          animation-direction: alternate;              
-  }
-  
-  @-webkit-keyframes slidein {
-  from {background-position: top; background-size:3000px; }
-  to {background-position: -100px 0px;background-size:2750px;}
-  }
-  
-  @keyframes slidein {
-  from {background-position: top;background-size:3000px; }
-  to {background-position: -100px 0px;background-size:2750px;}
-  
 }
 
 #header{
