--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 20px;
+    font-size: 17px;
     font-family: sans-serif ;
 }
 
 body{
     min-height: 100vh;
-    background: linear-gradient(to bottom, #000033, #000066);
+    background:  #000066;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,13 +20,11 @@ body{
 }
 
 #container{
-    width: 400px;
+    width: 360px;
     height: min-content;
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    box-shadow:  0 0 10px rgb(0, 0, 0,0.5);
-    border: 1px solid black;
 }
 
 #weather-header{
@@ -39,7 +37,7 @@ body{
     border: none;
     outline: none;
     background-color:rgb(216 237 255);
-    width: 85%;
+    width: 83%;
     font-size: 25px; /*Adjust*/
     padding-left: 15px;
     padding-right: 5px;
@@ -88,13 +86,13 @@ body{
     position: relative;
 }
 #temperature{
-    font-size: 50px;
+    font-size: 45px;
     font-weight: 700;
     margin-right: 5px;
 }
 
 #feels-like{
-    font-size: 17px;
+    font-size: 15px;
 }
 
 #description{
@@ -165,4 +163,3 @@ body{
     font-weight: 600;
     margin: 10px 0px;
 }
-
