--- a/style.css
+++ b/style.css
@@ -8,11 +8,33 @@
 
 body{
     min-height: 100vh;
-    background:  #000049;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url('background.png');
+    background-size:cover;
+    -webkit-animation: slidein 100s;
+    animation: slidein 100s;
+
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate;              
+}
+
+@-webkit-keyframes slidein {
+from {background-position: top; background-size:3000px; }
+to {background-position: -100px 0px;background-size:2750px;}
+}
+
+@keyframes slidein {
+from {background-position: top;background-size:3000px; }
+to {background-position: -100px 0px;background-size:2750px;}
 }
 
 #header{
@@ -25,6 +47,8 @@ body{
     background-color: white;
     border-radius: 10px;
     padding: 15px;
+    border: 1px solid black;
+    box-shadow:  0 0 10px rgb(0, 0, 0,0.5);
 }
 
 #weather-header{
